[package]
name = "schemamama_postgres"
version = "0.2.4"
authors = ["Skyler Lipthay <skyler.lipthay@gmail.com>", "Erich Schudt <erich_schudt@live.com>"]
description = "PostgreSQL adapter for the Schemamama migration system"
readme = "README.md"
keywords = ["schemamama", "database", "migration", "postgresql"]
license = "MIT"
repository = "https://github.com/eschudt/schemamama_postgres"

[dependencies]
schemamama = { git = "https://github.com/eschudt/schemamama" }
postgres = "0.17.0-alpha.2"
